# kaffee-server

./: Dockerfile  README.md  README.rst  config.ini  config.py  create_table.sql  create_tables.sql  default.nix  default.vcl  docker-compose.yml  go.mod  main.py  pyproject.toml  requirements.txt  run.sh  test_app.py  wsgi.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-melden.md
.github/workflows/: auto-merge.yml  codeql.yml  docker-image.yml  docker-publish.yml  linter.yml  publish.yml  python-app.yml
db/: db.go  maintenance.go
etc/systemd/system/: kaffee-server.service
kaffee_server/: __init__.py  admin.py  api.py  db.py  error_handlers.py  maintenance.py  schema.sql  settings.py  users.py
kaffee_server/admin/: __init__.py
kaffee_server/api/: __init__.py  v1.py
kaffee_server/templates/: base.html  overview.html
kaffee_server/templates/admin/: account.html  admin.html  backups.html  login.html  settings.html  transactions.html  users.html
kaffee_server/templates/errorpages/: base.html  generic.html  http.html  sql.html
templates/: admin.html  base.html  overview.html
tests/: test_app.py  test_kaffee_server.py  test_row.sql
users/: balances.go  users.go
