[tool.poetry]
name = "kaffee-server"
version = "0.1.0"
description = ""
authors = ["Johannes Arnold <johannes.arnold@stud.uni-hannover.de>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.3"
Flask-Login = "^0.5.0"
Flask-Cors = "^3.0.10"
python-bcrypt = "^0.3.2"
bjoern = "^3.2.2"
toml = "^0.10.2"
Flask-APScheduler = "^1.12.4"
flask-talisman = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
